# projeto_summerjob

./: .env  .gitignore  Dockerfile  MYTREE.MD  check_scraper.py  pyproject.toml  requirements.txt
data/: base_professores.csv  base_professores.csv.bak  dados_consolidados_professores.csv  professores_data1.csv  professores_data2.csv
src/: analyzer.py  check_models.py  clean_data.py  dashboard.py  main.py  migrate_to_master.py  reset_master.py  scraper.py
